Now everything works except button

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
 	<div class="bgImgDiv">
 		<h1>Todays goal is:</h1>
-			
-				<p id="todaysGoal"></p>
+			<p id="todaysGoal"></p>
 			<h2 id="inspQuote"></h2>
+		<div id="buttonDiv">
+			<button onclick="setGoal">Get a new goal!</button>
+		</div>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
