--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Todays goal is</title>
+	<title>Today's goal is</title>
 	<link href="https://fonts.googleapis.com/css?family=Archivo+Black:400" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="bgImgDiv">
-		<h1>Todays goal is:</h1>
+		<h1>Today's goal is:</h1>
 			<p id="todaysGoal"></p>
 			<h2 id="inspQuote"></h2>
 		<div id="buttonDiv">
-			<button onclick="setGoal">Get a new goal!</button>
+			<button onclick="setGoalAndQuote()">Get a new goal!</button>
 		</div>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
