--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<button onclick="setGoalAndQuote()">Get a new goal!</button>
 		</div>
 	</div>
+	<footer>Webdesign by Johan Karlsson ©2018 <br>Photo from pixabay.com</footer>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
